# iced-control

./: README.md
iced-driver/: Cargo.toml
iced-driver/src/: lib.rs
iced-gui/: Cargo.toml
iced-gui/src/: controller.rs  lib.rs  main.rs
iced-gui/src/gui/: app.rs  mod.rs  protocol.rs
iced-gui/src/gui/components/: serial.rs
iced-gui/src/gui/pages/: control.rs  mod.rs  open_page.rs
iced-mcu/: Cargo.toml  build.sh  memory.x  serial_read.py  serial_send.py  test.sh
iced-mcu/.cargo/: config
iced-mcu/src/: app.rs  main.rs  protocol.rs
