[package]
name = "iced-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
glob = "0.3.1"
iced = { version = "0.8.0", features = ["tokio"] }
iced_core = "0.8.1"
iced_lazy = "0.5.0"
iced_native = "0.9.1"
iced_style = "0.7.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = [ "libudev" ] }
tokio-util = { version = "0.7.7", features = ["codec"] }
iced-driver = { path="../iced-driver" }
