[package]
name = "iced-mcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btoi = { version="0.4.3", features=[], default-features=false}
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
heapless = "0.7.16"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
panic-semihosting = "0.6.0"
stm32l4xx-hal = { version="0.7.1", features=[ "stm32l476", "rt"] }


